<layout xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/old_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/main_toolbar"
                layout="@layout/toolbar_home_no_title" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/old_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:fontFamily="@font/gravitas_one"
            android:text="@string/game"
            android:textColor="@color/dark_blue"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <ImageView
            android:id="@+id/old_game_image"
            android:layout_width="357dp"
            android:layout_height="200dp"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="29dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:srcCompat="@drawable/grupo_foot" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="391dp"
            android:layout_height="296dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="23dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/old_game_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_game">

            <LinearLayout
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_game_home_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/contrail_one"
                    android:gravity="center"
                    android:text="@string/home_team"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/old_game_score_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/contrail_one"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/old_game_vs"
                    android:layout_width="6dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/dark_blue"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/vs"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/old_game_score_away"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/contrail_one"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/old_game_away_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:fontFamily="@font/contrail_one"
                    android:gravity="center"
                    android:text="@string/away_team"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_game_date_lb"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/old_game_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/ex_date"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_game_location_lb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/old_game_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/location_ex"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_game_mvp_lb"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mvp"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/old_game_mvp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mvp_ex"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/old_game_moment_lb"
                    android:layout_width="141dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/moment_lb"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/old_game_moment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/moment"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout >