<layout xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false">


        <TextView
            android:id="@+id/myscore_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:fontFamily="@font/gravitas_one"
            android:text="@string/app_name"
            android:textColor="@color/dark_blue"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mail_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:background="@color/slight_purple"
            android:hint="@string/mail"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="55dp"
            android:background="@color/slight_purple"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="125sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="148dp"
            android:background="@color/dark_blue"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="117dp"
            android:layout_height="86dp"
            android:layout_marginTop="39dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myscore_login"
            app:srcCompat="@drawable/playerfoot" />

        <TextView
            android:id="@+id/not_member_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="59dp"
            android:fontFamily="@font/roboto"
            android:text="@string/not_member"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout >