<layout xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/main_toolbar"
                layout="@layout/toolbar_home" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/gravitas_one"
            android:text="@string/menu"
            android:textColor="@color/dark_blue"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="333dp"
            android:layout_height="507dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/new_game_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_purple"
                android:fontFamily="@font/bangers"
                android:text="@string/new_game"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/historic_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_purple"
                android:fontFamily="@font/bangers"
                android:text="@string/historic"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/settings_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_purple"
                android:fontFamily="@font/bangers"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/help_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_purple"
                android:fontFamily="@font/bangers"
                android:text="@string/help"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/about_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_purple"
                android:fontFamily="@font/bangers"
                android:text="@string/about"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="87dp"
            android:layout_height="0dp"
            android:layout_marginBottom="559dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:srcCompat="@drawable/playerfoot" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout >
