<layout xmlns:android ="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/main_toolbar"
                layout="@layout/toolbar_home" />
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/myscore_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="84dp"
            android:fontFamily="@font/gravitas_one"
            android:text="@string/register"
            android:textColor="@color/dark_blue"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mail_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="54dp"
            android:background="@color/slight_purple"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_signin" />

        <EditText
            android:id="@+id/password_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="54dp"
            android:background="@color/slight_purple"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mail_signin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_signin"
            android:layout_width="125sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="62dp"
            android:background="@color/dark_blue"
            android:text="@string/signin"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/member_signin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="submit"
            />

        <ImageView
            android:id="@+id/logo_signin"
            android:layout_width="121dp"
            android:layout_height="95dp"
            android:layout_marginTop="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myscore_signin"
            app:srcCompat="@drawable/playerfoot" />

        <TextView
            android:id="@+id/member_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="59dp"
            android:fontFamily="@font/roboto"
            android:text="@string/member"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout >